<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/otp_title"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="12dp"
        android:text="@string/otp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginStart="16dp" />

    <TextView
        android:id="@+id/title"
        style="@style/TextAppearance.AppCompat.Body2"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_code"
        app:layout_constraintBottom_toTopOf="@id/otp_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:bar_enabled="true"
        app:bar_height="1dp"
        app:height="40dp"
        app:layout_constraintBottom_toTopOf="@id/verify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otp_title"
        app:length="6"
        app:otp_text_size="28dp"
        app:width="40dp" />

    <TextView
        android:id="@+id/error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/otp_error"
        android:drawablePadding="12dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="4dp"
        android:text="@string/otp_error_code"
        android:textColor="@color/red"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/baseline_error_24"
        app:layout_constraintEnd_toEndOf="@id/otp_view"
        app:layout_constraintStart_toStartOf="@id/otp_view"

        app:layout_constraintTop_toBottomOf="@id/otp_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/verify"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/verify"
        app:cornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent" />
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/verify"
        app:layout_constraintEnd_toEndOf="@id/verify"
        app:layout_constraintStart_toStartOf="@id/verify"
        app:layout_constraintTop_toTopOf="@id/verify" />

</androidx.constraintlayout.widget.ConstraintLayout>