<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/blue_1"
        android:textSize="48sp"

        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="12dp"
        android:text="@string/phone_number"
        app:layout_constraintBottom_toTopOf="@id/phone"
        app:layout_constraintStart_toStartOf="@id/phone"
        app:layout_goneMarginStart="16dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="phone"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/phone_bg"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="10dp"
        android:hint="@string/phone_number"
        android:paddingHorizontal="12dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/sign" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/sing_in"
        app:cornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/sign"
        app:layout_constraintEnd_toEndOf="@id/sign"
        app:layout_constraintStart_toStartOf="@id/sign"
        app:layout_constraintTop_toTopOf="@id/sign" />
</androidx.constraintlayout.widget.ConstraintLayout>